@@ -1,3 +1,6 @@
+2004-06-21 Bogdan Gheorghe
+	Fixed opening search external markers.
+
 2004-06-21 Alain Magloire
 
 	Big Patch from Vladimir Hirsl
